# simulation-experiments

./: CMakeLists.txt
include/: control.h  geometry.h  object.h  physics.h  shaders.h  utils.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/matrix-exponential/: CMakeLists.txt
libs/matrix-exponential/include/: matrix_exponential.h  r8lib.h
libs/matrix-exponential/src/: c8lib.c  matrix_exponential.c  r8lib.c
python/: numericSim.py
shared/: control.cpp  geometry.cpp  matrix.h  matrix.tpp  physics.cpp  shaders.cpp  utils.cpp
src/02-primitives/: main.cpp
src/03-lin-alg/: main.c  main.cpp
src/04-lin-alg2/: main.cpp
src/05-hyperbolic-motion/: matrix.cpp
src/05-hyperbolic-motion/include/: matrix.h
src/3-matrix-class/: main.cpp
src/5-hyperbolic-motion/: main.cpp
src/6-sim-control/: main.cpp
src/7-born-rigid/: main.cpp
src/8-shaders/: default.frag  default.vert  main.cpp
src/9-lorentz-transforms/: main.cpp
